results to dom, styling, refined fetch

--- a/src/eventbrite.html
+++ b/src/eventbrite.html
@@ -8,6 +8,8 @@
     <title>Document</title>
   </head>
   <body>
+    <select name="eventType" id="eventType"></select>
+    <button id="selectBtn">GO!</button>
     <div id="eventData" class="event"></div>
     <script src="scripts/keys.js"></script>
     <script src="scripts/eventbriteapi.js"></script>
