--- a/src/eventbrite.html
+++ b/src/eventbrite.html
@@ -8,9 +8,13 @@
     <title>Document</title>
   </head>
   <body>
+    <h2 class="fullText">API</h2>
+    <h2 class="fullText">EVENTBRITE</h2>
     <select name="eventType" id="eventType"></select>
     <button id="selectBtn">GO!</button>
     <div id="eventData" class="event"></div>
+
+    <div id="itinerary"></div>
     <script src="scripts/keys.js"></script>
     <script src="scripts/eventbriteapi.js"></script>
   </body>
